# toolschema

./: .gitignore  .readthedocs.yaml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  mkdocs.yml  pyproject.toml
.github/: PYPI_PUBLISH.md  REPO_ABOUT.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: config.yml  issue.yml
.github/workflows/: ci.yml  publish.yml  release.yml
docs/: adapters.md  api-reference.md  architecture.md  claude-desktop.md  cli.md  defining-tools.md  examples.md  faq.md  index.md  installation.md  integrations.md  pre-pep-alignment.md  provider-quirks.md  quickstart.md  scaffolding.md  standard-schema.md  type-mapping.md  validation.md
docs/tutorials/: 01-getting-started.md  02-mcp-server.md  03-langchain-integration.md  04-multi-provider-export.md  README.md
examples/: 01_basic.py  02_mcp_server.py  03_langchain.py  04_multi_provider.py  deep_agents_demo.py  demo_tools.py  verify_package.py
src/toolschema/: __init__.py  __main__.py  _decorator.py  _fields.py  _init_scaffold.py  _introspect.py  _ir.py  _schema_utils.py  _standard.py  _types.py  _validate.py  cli.py
src/toolschema/adapters/: __init__.py  _inline_refs.py  anthropic.py  gemini.py  mcp.py  openai.py
src/toolschema/integrations/: __init__.py  fastmcp.py  langchain.py  openai_agents.py  pydantic_ai.py
src/toolschema/templates/mcp_server/: README.md  claude_desktop_config.example.json  pyproject.toml
src/toolschema/templates/mcp_server/src/PACKAGE/: __init__.py  __main__.py  tools.py
tests/: complex_fixtures.py  deep_harness.py  deep_mcp_server.py  fixtures.py  test_adapters.py  test_bootstrap.py  test_cli.py  test_complex_e2e.py  test_core.py  test_deep_agents.py  test_init.py  test_integrations.py  test_mcp_smoke.py  test_parity.py  test_standard.py  test_types_extended.py  test_validate.py
tests/snapshots/: add_anthropic.json  add_canonical.json  add_gemini.json  add_mcp.json  add_openai.json  add_openai_strict.json  search_github_anthropic.json  search_github_canonical.json  search_github_gemini.json  search_github_mcp.json  search_github_openai.json  search_github_openai_strict.json  search_products_mcp.json
