[project]
name = "toolschema"
version = "1.0.0"
description = "Canonical Python layer for AI agent tools — function to JSON Schema, once, everywhere."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "toolschema contributors" }]
keywords = [
  "ai-agents",
  "tool-calling",
  "function-calling",
  "json-schema",
  "mcp",
  "openai",
  "anthropic",
  "langchain",
  "fastmcp",
  "pydantic-ai",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries",
  "Typing :: Typed",
]

dependencies = [
  "typing_extensions>=4.8.0; python_version<'3.11'",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.8",
]
pydantic = ["pydantic>=2.0"]
fastmcp = ["fastmcp>=2.0"]
langchain = ["langchain-core>=0.3", "pydantic>=2.0"]
openai-agents = ["openai-agents>=0.1"]
all = ["toolschema[pydantic,fastmcp,langchain,openai-agents,pydantic-ai,dev]"]
pydantic-ai = [
    "pydantic-ai>=0.1",
]

[project.scripts]
toolschema = "toolschema.cli:main"

[project.urls]
Homepage = "https://github.com/false200/toolschema"
Documentation = "https://github.com/false200/toolschema#readme"
Repository = "https://github.com/false200/toolschema"
Issues = "https://github.com/false200/toolschema/issues"
"Pre-PEP alignment" = "https://discuss.python.org/t/pre-pep-discussion-typing-tool-inspect-tool-schema-close-the-zod-gap-for-python-agent-dev/107431"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/toolschema"]

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = ["src/toolschema/templates"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "tests"]
