[project]
name = "{{project_name}}"
version = "0.1.0"
description = "MCP server with toolschema — function to JSON Schema, once."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "toolschema[fastmcp]>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/{{package_name}}"]
